-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: openjdk8u292
-
Component/s: hotspot
-
b01
Manifests like this:
/home/shade/jdk8u-jdk8u-dev/hotspot/src/cpu/ppc/vm/interp_masm_ppc_64.cpp: In member function 'void InterpreterMacroAssembler::lock_object(Register, Register)':
/home/shade/jdk8u-jdk8u-dev/hotspot/src/cpu/ppc/vm/interp_masm_ppc_64.cpp:913:68: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
markOopDesc::lock_mask_in_place));
^
/home/shade/jdk8u-jdk8u-dev/hotspot/src/cpu/ppc/vm/macroAssembler_ppc.cpp: In member function 'void MacroAssembler::compiler_fast_lock_object(ConditionRegister, Register, Register, Register, Register, Register)':
/home/shade/jdk8u-jdk8u-dev/hotspot/src/cpu/ppc/vm/macroAssembler_ppc.cpp:2050:72: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
markOopDesc::lock_mask_in_place));
This is 8u-specific trouble similar toJDK-8221725, so it must be caused by JDK-8221408.
Note that JDK 9+ is not affected, becauseJDK-8144019 changed the affected lines to effectively use the "long" argument overload:
https://hg.openjdk.java.net/jdk9/jdk9/hotspot/rev/4a24de859a87#l29.68
https://hg.openjdk.java.net/jdk9/jdk9/hotspot/rev/4a24de859a87#l31.599
It makes sense to backport those two changes to 8u to unbreak PPC64 builds.
/home/shade/jdk8u-jdk8u-dev/hotspot/src/cpu/ppc/vm/interp_masm_ppc_64.cpp: In member function 'void InterpreterMacroAssembler::lock_object(Register, Register)':
/home/shade/jdk8u-jdk8u-dev/hotspot/src/cpu/ppc/vm/interp_masm_ppc_64.cpp:913:68: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
markOopDesc::lock_mask_in_place));
^
/home/shade/jdk8u-jdk8u-dev/hotspot/src/cpu/ppc/vm/macroAssembler_ppc.cpp: In member function 'void MacroAssembler::compiler_fast_lock_object(ConditionRegister, Register, Register, Register, Register, Register)':
/home/shade/jdk8u-jdk8u-dev/hotspot/src/cpu/ppc/vm/macroAssembler_ppc.cpp:2050:72: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
markOopDesc::lock_mask_in_place));
This is 8u-specific trouble similar to
Note that JDK 9+ is not affected, because
https://hg.openjdk.java.net/jdk9/jdk9/hotspot/rev/4a24de859a87#l29.68
https://hg.openjdk.java.net/jdk9/jdk9/hotspot/rev/4a24de859a87#l31.599
It makes sense to backport those two changes to 8u to unbreak PPC64 builds.
- relates to
-
JDK-8221408 Windows 32bit build build errors/warnings in hotspot
-
- Resolved
-