8259568: PPC64 builds broken after JDK-8221408 8u backport

Reviewed-by: mdoerr, aph